--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
+
 {
-  "name": "kurvylab-website",
+  "name": "kurvylab-wellness",
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
@@ -7,14 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest"
-  },
-  "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "next": "13.4.12",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.3.2"
   }
 }
