--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
-
 {
-  "name": "kurvylab-wellness",
+  "name": "kurvylab-website",
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
@@ -8,11 +7,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.14",
-    "next": "13.4.12",
-    "postcss": "^8.4.21",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "^3.3.2"
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest"
   }
 }
