--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "kurvylab-website",
+  "name": "kurvylab-wellness",
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
-"dependencies": {
-  "next": "13.5.6",
-  "react": "18.2.0",
-  "react-dom": "18.2.0"
-}
+  "dependencies": {
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest"
+  }
 }
