--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "kurvylab-wellness",
   "version": "1.0.0",
@@ -7,8 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest"
+    "autoprefixer": "^10.4.14",
+    "next": "13.4.12",
+    "postcss": "^8.4.21",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.3.2"
   }
 }
